desc book when create order